create and update set with tunes
finished c&u set
