# internal/api/apimodel/model_create_set.go
@@ -19,4 +19,6 @@ type CreateSet struct {
 
 	// The name of the creator of the set
 	Creator string `json:"creator,omitempty"`
+
+	Tunes []uint64 `json:"tunes,omitempty"`
 }
